# sial

./: .gitignore  .gitignore.txt  LICENSE  Pipfile  README.md  gitignore.txt  pyproject.toml
sial/: __init__.py  crosser.py  inferer.py  toy_example.ipynb  utils.py
tutorial/: tutorial_1_cit.ipynb  tutorial_2_rit.ipynb  tutorial_3_crosser.ipynb
