[project]

name = "sial-pkg"

version = "0.0.4"

authors = [
  { name="Po-Hsien Huang", email="psyphh@nccu.edu.tw" },
]

description = "Statistical Inference After Learning"

readme = "README.md"

dependencies = [
  "scikit-learn>=1.5.0",
  "pandas>=2.0.3",
]

requires-python = ">=3.9"

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
